--- a/tough_examples/CMakeLists.txt
+++ b/tough_examples/CMakeLists.txt
@@ -60,7 +60,18 @@ target_link_libraries(reset_robot ${catkin_LIBRARIES})
 add_executable( arm_control_example src/control_examples/arm_control_example.cpp)
 add_dependencies(arm_control_example ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(arm_control_example ${catkin_LIBRARIES})
+###########################################################################3
+## Test ARM Ankit
+add_executable( arm_control_example_ankit_2 src/control_examples/arm_control_example_ankit_2.cpp)
+add_dependencies(arm_control_example_ankit_2 ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(arm_control_example_ankit_2 ${catkin_LIBRARIES})
+ ##########
+add_executable( demo_ankit src/control_examples/demo_ankit.cpp)
+add_dependencies(demo_ankit ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(demo_ankit ${catkin_LIBRARIES})
 
+
+###########################################################################3
 
 ## Test head navigation
 add_executable( head_control_example src/control_examples/head_control_example.cpp)
